--- a/PeliculasAPI/appsettings.Development.json
+++ b/PeliculasAPI/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-IHJ15T0\\SQLEXPRESS;Initial Catalog=PeliculasAPI;Integrated Security=True"
   },
+  "jwt": {
+    "key": "ASDKHJASDHKALSHLKFAJSHDFAKLJSDHAKLSDHAKLSD"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
